# klee-mcp

./: .gitignore  DEPLOYMENT.md  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
benchmark/: README.md  run_bench.py
benchmark/candidates/: bof_01.json  bof_01_bounded.json  bof_01_bounded_tootight.json  cve_2015_8540_repro.json  cve_2015_8540_with_null_term.json  intoverflow_01.json  libjpeg_read_header.json  libpng_1647_check_keyword.json  libpng_check_fp_number.json  libpng_check_fp_number_bug.json  libpng_check_fp_number_unbounded.json  libpng_format_number.json  libpng_push_read.json  libpng_push_read_deep.json  libpng_trns_focused.json  libpng_whole_lib_fp.json  libpng_whole_lib_sig_cmp.json  libxml2_read.json  libxml2_read_64.json  null_01.json  safe_01.json  uaf_01.json
benchmark/reach_candidates/: dispatch_reach.json  dispatch_unreached.json
examples/real/: fuzz_jpeg_header.c  fuzz_xml_read.c  fuzz_xml_read_64.c  png_check_fp_number.c  png_check_fp_number_bug.c  png_check_keyword_1619.c  png_check_keyword_1647.c  whole_lib_format_number.c  whole_lib_fp_number.c  whole_lib_push_read.c  whole_lib_push_read_deep.c  whole_lib_sig_cmp.c  whole_lib_trns_focused.c
examples/toy/: EXAMPLES.md  (+6 more)
paper/: README.md  klee-mcp-kes-blinded.tex  klee-mcp-kes.tex
scripts/: build_lib_bc.sh  check_reach.py  run_example.sh  run_mcp.sh  verify_one.py
symex_mcp/: __init__.py  exploitability.py  harness_gen.py  klee_runner.py  models.py  reachability.py  reproducer.py  server.py
vuln_finder/: SKILL.md  candidate_schema.json
