[project]
name = "symex-mcp"
version = "0.1.0"
description = "MCP server validating LLM-reported C/C++ vulnerabilities with KLEE"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic>=2.6",
    "anyio>=4.3",
    "typer>=0.12",
    "rich>=13.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["symex_mcp*"]
